--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ dependencies = [
     "dotenv>=0.9.9",
     "openai>=1.90.0",
     "fastapi>=0.104.0",
-    "uvicorn>=0.24.0",
+    "uvicorn[standard]>=0.24.0",
     "requests>=2.32.4",
     "pydantic>=2.5.0",
     "aiohttp>=3.12.13",
+    "websockets>=12.0",
 ]
